Fix broken layout when zoomed in

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -28,7 +28,7 @@
     float: left;
     display: grid;
     position: relative;
-    width: 22%;
+    width: 20%;
     height: 100%;
 }
 
@@ -38,23 +38,22 @@
 
 #info {
     float: left;
-    width: 45%;
+    width: 50%;
     height: 100%;
     overflow: visible;
     margin-left: 3%;
-    margin-right: 3%;
+    margin-right: 2%;
 }
 
 #name_container {
     position: relative;
-    top: 6%;
     width: 100%;
 }
 
 #name {
     top: 10%;
     display: inline;
-    font-size: 28px;
+    font-size: 200%;
     font-family: Motiva Sans, sans-serif;
 }
 
@@ -82,11 +81,10 @@
     display: flex;
     width: fit-content;
     align-items: center;
-    margin-top: 5%;
 }
 
 #age {
-    font-size: 26px;
+    font-size: 170%;
     font-family: Motiva Sans, sans-serif;
     margin: 0;
 }
@@ -96,7 +94,7 @@
     border-radius: 50%;
     border-color: rgb(192, 41, 66);
     border-style: solid;
-    font-size: 18px;
+    font-size: 125%;
     font-family: Motiva Sans, sans-serif;
     margin: 0 0 0 10%;
 }
@@ -107,10 +105,10 @@
 }
 
 .header_button {
-    font-size: 95%;
+    font-size: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     border: none;
-    padding: 4%;
+    padding: 3.5%;
     border-radius: 6px;
     margin-right: 2%;
 }
@@ -130,9 +128,9 @@
 
 #badge_container {
     background-color: rgba(0, 0, 0, 0.2);
-    padding: 4% 4% 6%;
-    margin-top: 5%;
+    margin-top: 2%;
     border-radius: 6px;
+    padding: 4%;
 }
 
 #badge_img {
@@ -140,21 +138,19 @@
 }
 
 #badge_text_container {
-    display: flex;
-    flex-flow: column;
-    margin-left: 30%;
+    margin-left: 25%;
     width: 50%;
     height: 100%;
 }
 
 .badge_text {
     margin: 0;
-    padding-top: 5%;
+    padding: 2.5%;
 }
 
 #levelbadge {
     float: left;
-    width: 30%;
+    width: 32%;
 }
 
 #m_description {
@@ -179,10 +175,11 @@
     padding: 4%;
     margin-top: 5%;
     border-radius: 6px;
-    height: 11vw;
+    height: 12vw;
 }
 
 #m_levelbadge {
+    padding-top: 5%;
     width: 52%;
 }
 
